<resources>
    <string name="app_name">GetInShape</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="tabbar_titles">
            <item>Woche</item>
            <item>Monat</item>
    </string-array>

    <string name="title">Titel</string>

    <!-- strings for the burger menu -->
    <string name="nav_person">Körperdaten</string>
    <string name="nav_goals">Ziele</string>
    <string name="nav_statistics">Statistiken</string>
    <string name="nav_chronic">Chronik</string>
    <string name="nav_about_us">Über uns</string>
    <string name="nav_options">Einstellungen</string>
    <string name="nav_support">Hilfe</string>

    <!-- strings for the cards -->
    <string name="today">Heute</string>
    <string name="yesterday">Gestern</string>
    <string name="hour">H</string>
    <string name="minute">Min.</string>
    <string name="seconds">Sek.</string>
    <string name="distance">Kilometer</string>


    <!-- strings for the create new training view -->
    <string name="newTraining">Neues Training</string>
    <string name="action_save">Speichern</string>
    <string name="date">Heute</string>
    <string name="time">08:00</string>

    <!-- strings for discard the dialogbox -->
    <string name="discard_title">"Änderung verwerfen ?"</string>
    <string name="discard">Verwerfen</string>
    <string name="cancel">Abbrechen</string>

    <!-- strins for different trainingtypes -->
    <string name="bodybuilding">Bodybuilding</string>
    <string name="endurance">Ausdauer</string>

    <string name="action_settings">Settings</string>
    <string name="timeInMilis">Time</string>

</resources>
