<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/user_actions">
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_person" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_done_all_black_24dp"
            android:title="@string/nav_goals" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_chart_line"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_chronic"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_chronic" />
    </group>

   <group android:checkableBehavior="single"
       android:id="@+id/help_and_support">
            <item
                android:id="@+id/nav_options"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_options" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/nav_support" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/nav_about_us" />

   </group>
</menu>
