<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height">

    <android.support.v4.widget.CircleImageView
        android:id="@+id/duration_time_icon"
        android:layout_width="@dimen/image_radius"
        android:layout_height="@dimen/image_radius"
        android:padding="@dimen/image_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/text_padding_right"
        android:paddingStart="@dimen/text_padding_left"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/duration_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin_between"
                android:layout_marginStart="@dimen/text_margin_between"
                android:layout_marginTop="@dimen/text_margin_top"
                android:focusable="false"
                android:inputType="phone"
                android:maxLength="@dimen/input_time_length"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/duration_hour_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/text_margin_between"
                android:layout_marginStart="@dimen/text_margin_between"
                android:layout_marginTop="@dimen/text_margin_top"
                android:background="@android:color/transparent"
                android:labelFor="@id/training_date"
                android:padding="4dp"
                android:text="@string/hour"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/duration_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin_between"
                android:layout_marginStart="@dimen/text_margin_between"
                android:layout_marginTop="@dimen/text_margin_top"
                android:focusable="false"
                android:inputType="phone"
                android:maxLength="@dimen/input_time_length"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/duration_min_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/text_margin_between"
                android:layout_marginStart="@dimen/text_margin_between"
                android:layout_marginTop="@dimen/text_margin_top"
                android:background="@android:color/transparent"
                android:labelFor="@id/training_date"
                android:padding="4dp"
                android:text="@string/minute"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/duration_seconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin_between"
                android:layout_marginStart="@dimen/text_margin_between"
                android:layout_marginTop="@dimen/text_margin_top"
                android:focusable="false"
                android:inputType="phone"
                android:maxLength="@dimen/input_time_length"
                android:textSize="@dimen/text_size" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/duration_seconds_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/text_margin_between"
                android:layout_marginStart="@dimen/text_margin_between"
                android:layout_marginTop="@dimen/text_margin_top"
                android:background="@android:color/transparent"
                android:labelFor="@id/training_date"
                android:padding="4dp"
                android:text="@string/seconds"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size" />

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>